feat(): validate auth